[tool.poetry]
name = "app-scaler"
version = "0.1.1"
description = ""
authors = ["CrusaderX <thepliable2@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
kubernetes = "^24.2.0"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
Jinja2 = "^3.1.2"
boto3 = "^1.26.129"
botocore = "^1.29.129"
PyYAML = "6.0.1"
aioboto3 = "^11.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.app:start"
