[tool.poetry]
name = "app-slash-command"
version = "0.1.1"
description = ""
authors = ["CrusaderX <thepliable2@gmail.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.85.0"
uvicorn = "^0.18.3"
python-multipart = "^0.0.5"
requests = "^2.28.1"
aiohttp = "^3.8.3"
slack-sdk = "^3.19.1"
boto3 = "^1.24.94"
prometheus-client = "^0.15.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "src.app:start"
